<resources>
    <string name="app_name">FirstProjectShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password_hint">Enter Password</string>
    <string name="userID_hint">Enter User Name</string>
    <string name="ShoeStore_Login_Page">ShoeStore Login Page</string>
    <string name="Remember_me">Remember Me</string>
    <string name="Log_in">Log In</string>
    <string name="Sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="welcome_to_the_shoestore">Welcome to the Shoestore</string>
    <string name="to_proceed_to_instructions_click_on_the_button_below">To Proceed to Instructions, Click on the button bellow</string>
    <string name="Go_to_Instructions">"Go to Instructions "</string>
    <string name="scrollView">scrollView</string>
    <string name="Add_Shoe">Add Shoe</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
    <string name="enter_shoe_information">Enter Shoe information</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="enter_shoes_size">Enter Shoes Size</string>
    <string name="enter_shoes_company">Enter Shoes Company</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="instructions">Instructions Page</string>
    <string name="steps">Steps</string>
    <string name="go_to_shoe_list">Go to Shoe List</string>
    <string name="instructions_page">Instructions</string>
    <string name="_1_click_button_below">1. Click Button below</string>
    <string name="_2_list_of_shoes_will_be_shown_if_there_is_any">2. List of Shoes will be Shown if there is any</string>
    <string name="_3_tab_the_floating_button_in_the_next_screen_to_add_new_shoes">3. Tab the floating button in the next screen to add new shoes</string>
</resources>